# apertium-kaz-tat

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README  apertium-kaz-tat.kaz-tat.dix  apertium-kaz-tat.kaz-tat.lrx  apertium-kaz-tat.kaz-tat.rlx  apertium-kaz-tat.kaz-tat.t1x  apertium-kaz-tat.kaz-tat.t2x  apertium-kaz-tat.kaz.lexc  apertium-kaz-tat.tat-kaz.rlx  apertium-kaz-tat.tat-kaz.t1x  apertium-kaz-tat.tat-kaz.t2x  apertium-kaz-tat.tat.lexc  apertium-kaz-tat.tat.twol  configure.ac  info.rkt  main.rkt  modes.xml  testcorpus_kaz-tat.sh  update-morphs.bash
corpa/: README  corpus.kaz-tat.postedit.txt  corpus.kaz.disambiguated.txt  corpus.kaz.txt  kaz.crp.txt  nova_traduko.txt  origina_traduko.txt  stems_tokenized_wrong.txt
dev/: Pending_tests.html  Regression_tests.html  TODAY.txt  csv2dix.py  inconsistency.sh  intersect.py  pending-azattyq.txt  testvoc-summary.kaz-tat.txt  testvoc-summary.tat-kaz.txt  trimmed-coverage.sh  verbs-apertium-kaz-tat.kaz.lexc  verbs-apertium-kaz-tat.tat.lexc
paper/: Makefile  numbers.gnumeric  paper.bib  paper.tex
t/: Pending_tests.html  Regression_tests.html  test.rkt
test/: kaz-tat-pending-biltrans-expected.txt  kaz-tat-pending-chunker-expected.txt  kaz-tat-pending-chunker2-expected.txt  kaz-tat-pending-disam-expected.txt  kaz-tat-pending-generator-expected.txt  kaz-tat-pending-input.txt  kaz-tat-pending-morph-expected.txt  kaz-tat-pending-postgen-expected.txt  kaz-tat-pending-postgen-gold.txt  kaz-tat-pending-pretransfer-expected.txt  kaz-tat-regression-disam-expected.txt  (+11 more)
test-scripts/: kaz-tat-corp.test  tat-kaz-corp.test
(+34 files in other folders)
